--- a/style.css
+++ b/style.css
@@ -506,6 +506,34 @@ img {
   right: 1rem;
 }
 
+/* MOBILE RESPONSIVE | ABOUT TO BUS */
+@media screen and (max-width: 520px) {
+  /* display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(42rem, 1fr)); */
+.aboutBanner__wrapper {
+  display: grid;
+  grid-template-columns: 1fr; 
+  text-align: center;
+
+}
+.aboutBanner__img p:before {
+  content: " ";
+  display: inline-block;
+  position: relative;
+  background-color: var(--clr-dark);
+  height: 0.2rem;
+  width: 41.07rem;
+  bottom: 0.2rem;
+  right: 1rem;
+  flex-direction: column;
+}
+.aboutBanner__text {
+  margin-right: 8rem;
+} 
+}
+
+
+
 /* Latest Style */
 .aboutStyle {
   background-color: var(--clr-dark);
@@ -526,19 +554,6 @@ img {
 }
 
 /* STYLE */
-<style > input[type="text"] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 2px solid red;
-}
-</style>
-
-
-
-
 
 /* MOBILE RESPONSIVE | FOOTER */
 @media screen and (max-width: 520px) {
@@ -576,16 +591,6 @@ img {
   font-weight: 500;
   line-height: 1;
 }
-
-/* CATALOG INTERIOR */
-
-/* .catalogCard--text p {
-  display: flex;
-  font-size: var(--h4);
-  color: var(--clr-dark);
-  text-align: justify;
-  align-items: center;
-} */
 
 .catalogInterior__title p {
   font-size: var(--h3);
@@ -651,26 +656,168 @@ img {
   margin-top: -3.5%;
 }
 
-/* CONTACT PAGE NUMBER */
-.contactBanner {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 2px solid red;
+
+/* MOBILE RESPONSIVE | CATALOGBOG */
+@media screen and (max-width: 520px) {
+.catalogInterior_card:first-child {
+  display: flex;
+  flex-direction: column;
+}
+.catalogInterior_wrapper:first-child {
+  padding-top: ;
+}
+.catalogInterior_wrapper:first-child::before {
+  position: absolute;
+  content: "";
+  width: 70%;
+  height: 350px;
+  align-self: ;
+  background-color: var(--clr-secondary);
+  z-index: -1;
+  margin-inline-end: -190%;
+  margin-inline-start: -150%;
+  margin-top: -9%;
+} 
+
+
+.catalogInterior_card:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+}
+.catalogInterior:nth-child(2){
+  padding-top: ;
+}
+.catalogInterior:nth-child(2)::before{
+  position: absolute;
+  content: "";
+  width: 70%;
+  height: 350px;
+  align-self: ;
+  background-color: var(--clr-secondary);
+  z-index: -1;
+  margin-inline-end: -190%;
+  margin-inline-start: -250%;
+  margin-top: -9%;
+} 
+
+.catalogInterior__card:last-child {
+  display: flex;
+  flex-direction: column;
+}
+.catalogInterior__card:last-child {
+  padding-top: ;
+}
+.catalogInterior__wrapper:last-child ::before {
+  position: absolute;
+  content: "";
+  width: 70%;
+  height: 350px;
+  align-self: ;
+  background-color: var(--clr-secondary);
+  z-index: -1;
+  margin-inline-end: -200%;
+  margin-inline-start: -250%;
+  margin-top: -9%;
 }
 
-.contactBanner__wrapper h1 {
+}
+
+
+
+
+/* CONTACTS */
+.contact {
+  height: 91.3vh;
+  background-color: var(--clr-tertiary);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact form {
+  display: flex;
+  flex-direction: column;
+}
+/* .contact__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 40rem;
+  gap: 10rem;
+} */
+/* 
+.contact__wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+} */
+
+.contact__wrapper form {
+}
+.contact form input,
+textarea {
+  width: 100%;
+  padding: 2rem 1rem;
+  border: none;
+  margin-bottom: 1rem;
+  font-family: var(--font-style);
+  font-size: 1.7rem;
+  background-color: var(--clr-tertiary);
+  border-bottom: 1px solid var(--clr-dark);
+}
+.contact form textarea {
+  height: 20rem;
+}
+
+.contact__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 40rem;
+  gap: 10rem;
+}
+
+.contact__info {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contact h1 {
+  font-weight: 700;
   font-size: var(--h1);
   color: var(--clr-primary);
-  font-weight: 700;
 }
-.contactBanner__wrapper p {
-  font-weight: 500;
+.contact__info table tr td {
+  padding: 1rem;
+  font-size: 2rem;
+}
+.contact__info h3 {
+  font-size: var(--h3);
+  margin-bottom: 2rem;
+  font-weight: 600;
+}
+.btnn {
+  background-color: transparent;
+  border: transparent;
+  border-radius: 10rem;
+  padding: 1rem 2rem;
+  color: transparent;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.btnn.bg-dark {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  font-weight: 800;
+  letter-spacing: 1rem;
+  text-align: center;
+}
+.btnn.bg-dark:hover {
+  background-color: var(--clr-light);
+  color: var(--clr-dark);
+  font-weight: 800;
 }
 
-/* Assets */
+/* Asshets */
 .btn {
   background-color: transparent;
   border: transparent;
@@ -688,6 +835,48 @@ img {
 .btn.bg-tertiary:hover {
   background-color: var(--clr-dark);
   color: var(--clr-tertiary);
+}
+.btn.bg-dark {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+}
+.no-bg {
+  color: var(--clr-dark);
+}
+.no-bg:hover {
+  color: var(--clr-primary);
+}
+*/
+
+
+/* ASSETS */
+.btn {
+  background-color: transparent;
+  border: transparent;
+  border-radius: 10rem;
+  padding: 1rem 2rem;
+  color: transparent;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.btn.bg-tertiary {
+  background-color: var(--clr-tertiary);
+  color: var(--clr-dark);
+  font-weight: 700;
+}
+.btn.bg-tertiary:hover {
+  background-color: var(--clr-dark);
+  color: var(--clr-tertiary);
+}
+.btn.bg-black {
+  background-color: var(--clr-dark);
+  color: var(--clr-tertiary);
+  letter-spacing: 1rem;
+  text-align: center;
+  font-weight: 700;
+}
+.btn.bg-black:hover {
+  background-color: var(--clr-primary);
+  color: var(--clr-dark);
 }
 .no-bg {
   color: var(--clr-dark);
