--- a/style.css
+++ b/style.css
@@ -347,6 +347,9 @@ img {
 }
 
 /* Home Catalog */
+.header__wrapper {
+  max-width: 200rem;
+}
 .homeCatalog {
   padding: 5rem 0;
   background-color: var(--clr-tertiary);
@@ -510,29 +513,26 @@ img {
 @media screen and (max-width: 520px) {
   /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(42rem, 1fr)); */
-.aboutBanner__wrapper {
-  display: grid;
-  grid-template-columns: 1fr; 
-  text-align: center;
-
+  .aboutBanner__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .aboutBanner__img p:before {
+    content: " ";
+    display: inline-block;
+    position: relative;
+    background-color: var(--clr-dark);
+    height: 0.2rem;
+    width: 41.07rem;
+    bottom: 0.2rem;
+    right: 1rem;
+    flex-direction: column;
+  }
+  .aboutBanner__text {
+    margin-right: 8rem;
+  }
 }
-.aboutBanner__img p:before {
-  content: " ";
-  display: inline-block;
-  position: relative;
-  background-color: var(--clr-dark);
-  height: 0.2rem;
-  width: 41.07rem;
-  bottom: 0.2rem;
-  right: 1rem;
-  flex-direction: column;
-}
-.aboutBanner__text {
-  margin-right: 8rem;
-} 
-}
-
-
 
 /* Latest Style */
 .aboutStyle {
@@ -612,6 +612,7 @@ img {
   text-align: justify;
 }
 .catalogInterior__card {
+  max-width: 150rem;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -656,74 +657,33 @@ img {
   margin-top: -3.5%;
 }
 
-
 /* MOBILE RESPONSIVE | CATALOGBOG */
 @media screen and (max-width: 520px) {
-.catalogInterior_card:first-child {
-  display: flex;
-  flex-direction: column;
-}
-.catalogInterior_wrapper:first-child {
-  padding-top: ;
-}
-.catalogInterior_wrapper:first-child::before {
-  position: absolute;
-  content: "";
-  width: 70%;
-  height: 350px;
-  align-self: ;
-  background-color: var(--clr-secondary);
-  z-index: -1;
-  margin-inline-end: -190%;
-  margin-inline-start: -150%;
-  margin-top: -9%;
-} 
+  .catalogInterior__card::before {
+    display: none;
+  }
 
-
-.catalogInterior_card:nth-child(2) {
-  display: flex;
-  flex-direction: column;
+  .catalogInterior__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .catalogInterior__card:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .catalogInterior__card ul:nth-child(2) {
+    padding-right: 0;
+  }
+  .catalogCard--text {
+    padding-bottom: 5rem;
+  }
+  .catalogCard--text {
+    flex: 1;
+    padding-left: 0;
+  }
 }
-.catalogInterior:nth-child(2){
-  padding-top: ;
-}
-.catalogInterior:nth-child(2)::before{
-  position: absolute;
-  content: "";
-  width: 70%;
-  height: 350px;
-  align-self: ;
-  background-color: var(--clr-secondary);
-  z-index: -1;
-  margin-inline-end: -190%;
-  margin-inline-start: -250%;
-  margin-top: -9%;
-} 
-
-.catalogInterior__card:last-child {
-  display: flex;
-  flex-direction: column;
-}
-.catalogInterior__card:last-child {
-  padding-top: ;
-}
-.catalogInterior__wrapper:last-child ::before {
-  position: absolute;
-  content: "";
-  width: 70%;
-  height: 350px;
-  align-self: ;
-  background-color: var(--clr-secondary);
-  z-index: -1;
-  margin-inline-end: -200%;
-  margin-inline-start: -250%;
-  margin-top: -9%;
-}
-
-}
-
-
-
 
 /* CONTACTS */
 .contact {
@@ -815,6 +775,19 @@ textarea {
   background-color: var(--clr-light);
   color: var(--clr-dark);
   font-weight: 800;
+}
+
+/* MOBILE RESPONSIVE | CONTACTO */
+@media screen and (max-width: 520px) {
+  .contact {
+    padding-top: 20rem;
+    padding-bottom: 10rem;
+    height: 100rem;
+  }
+  .contact__wrapper {
+    grid-template-columns: 1fr;
+    gap: 4.5rem;
+  }
 }
 
 /* Asshets */
